--- a/dashboard/.vscode/settings.json
+++ b/dashboard/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "dart.flutterSdkPath": "D:\\Gogol New\\QuantumDev\\flutter_dashboard\\.fvm\\versions\\3.27.0"
+    "dart.flutterSdkPath": "D:\\Gogol New\\QuantumDev\\flutter_dashboard\\.fvm\\versions\\3.27.0",
+    "zencoder.enableRepoIndexing": true
 }
