--- a/dashboard/pubspec.yaml
+++ b/dashboard/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   dotted_border: ^2.1.0
   shared_preferences: ^2.5.3
   flutter_colorpicker: ^1.1.0
+  file_picker: ^10.1.9
 
 dev_dependencies:
   flutter_test:
