--- a/dashboard/pubspec.yaml
+++ b/dashboard/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_colorpicker: ^1.1.0
   file_picker: ^10.1.9
+  flutter_launcher_icons: ^0.14.4
+  animated_text_kit: ^4.2.3
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   flutter_test:
