--- a/dashboard/web/manifest.json
+++ b/dashboard/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "dashboard",
-    "short_name": "dashboard",
+    "name": "Dashboard App",
+    "short_name": "Dashboard",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#4CAF50",
+    "theme_color": "#388E3C",
+    "description": "Dashboard application for customer management and analytics.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
