--- a/dashboard/web/manifest.json
+++ b/dashboard/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "Dashboard",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#4CAF50",
-    "theme_color": "#388E3C",
+    "background_color": "#hexcode",
+    "theme_color": "#hexcode",
     "description": "Dashboard application for customer management and analytics.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
