--- a/dashboard/pubspec.yaml
+++ b/dashboard/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dashboard
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -11,9 +11,9 @@ dependencies:
     sdk: flutter
   csv: ^5.1.1
   path_provider: ^2.1.3
-  fl_chart: ^0.68.0 
+  fl_chart: ^0.68.0
   http: ^1.2.1
-  intl: ^0.19.0  # Or the latest version - Add this line
+  intl: ^0.19.0 # Or the latest version - Add this line
   dotted_border: ^2.1.0
   shared_preferences: ^2.5.3
   flutter_colorpicker: ^1.1.0
@@ -21,6 +21,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   animated_text_kit: ^4.2.3
   flutter_animate: ^4.5.2
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
